[package]
name = "ultra_nrepl"
version = "0.1.0"
authors = ["Michael Lutsiuk <michael.lutsiuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = "0.2.2"
clap = "2.33"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.48"
serde_bencode = "0.2.1"
dirs = "2.0.2"
fs2 = "0.4.3"
